examples/type_system/failing/200_effect_row_absent_ordering_linked_violation_e421.flx
// E421: deferred Absent catches shared-row binding from a later argument.

fn needs_linked_absence(
    first: (() -> Int with e - IO),
    second: (() -> Int with e)
) -> Int with e - IO {
    first() + second()
}

fn row_var_worker() -> Int with e {
    1
}

fn io_worker() -> Int with IO {
    print("io")
    2
}

fn main() -> Unit with IO {
    let _ = needs_linked_absence(row_var_worker, io_worker)
}
